Thu May 06 11:42:16 GMT 2010  Olly Betts <olly@survex.com>

	* tests/harness/fdtracker.cc: Don't pass NULL to closedir().

Thu May 06 11:19:41 GMT 2010  Olly Betts <olly@survex.com

	* tests/api_anydb.cc: Test UUID is 36 characters long.

Thu May 06 10:41:21 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/valuegepostlist.cc: Use "str.h" and str().

Thu May 06 10:01:48 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/valuegepostlist.cc: Remove unused headers.

Thu May 06 09:55:27 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/valuegepostlist.cc,matcher/valuerangepostlist.cc:
	  Keep return value from valuelist->get_value() as a const string &
	  rather than a string - could be more efficient on some compilers,
	  though testing with gcc 4.1 revealed no difference.

Thu May 06 09:49:12 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/valuegepostlist.cc: "while(" -> "while (" in recent patch.

Thu May 06 09:30:27 GMT 2010  Olly Betts <olly@survex.com>

	* docs/replication.rst: Remove experimental warning.

Thu May 06 05:05:57 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/valuerangepostlist.cc: Use "str.h" and str().

Thu May 06 05:03:22 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/valuerangepostlist.cc: Remove '#include "leafpostlist.h"'
	  and '#include "document.h"' which are no longer used.

Thu May 06 04:53:07 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/valuerangepostlist.cc: Remove '#include "autoptr.h"' which is
	  no longer required.

Thu May 06 04:18:25 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/valuerangepostlist.cc: "while(" -> "while (" in recent patch.

Wed May 05 16:44:17 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/orpostlist.cc,matcher/orpostlist.h: Add
	  OrPostList::check() method, which calls check() on the
	  sub-postlists, rather than falling back to skip_to().  This is
	  particularly helpful when a sub-postlist is one for which