@@ -142,3 +142,4 @@ Helpful comments, bug reports, small patches:
 	Craig A. Anderson
 	Jason Tackaberry
 	 Tomas Carnecky
+	 Sune Vuorela
