@@ -111,6 +111,9 @@ EXTRA_DIST = ChangeLog ChangeLog.examples HACKING PLATFORMS xapian-core.spec \
  include/xapian/error.h include/xapian/errordispatch.h generate-exceptions \
  exception_data.pm preautoreconf dir_contents
 
+cmakedir = $(libdir)/cmake/xapian
+cmake_DATA = cmake/xapian-config.cmake cmake/xapian-config-version.cmake
+
 # docsource.mk is generated by preautoreconf, run by bootstrap prior to
 # it running autoreconf.
 include docsource.mk
