@@ -1107,6 +1107,11 @@ AC_SYS_LARGEFILE
 dnl Libtool sets this (to yes|no|unknown) and we use it in xapian-config.
 AC_SUBST(link_all_deplibs_CXX)
 
+dnl Shared library extension.
+module=no
+eval "SHLIBEXT=$shrext_cmds"
+AC_SUBST(SHLIBEXT)
+
 dnl Split up the version number into "MAJOR.MINOR.REVISION".
 MAJOR_VERSION=`echo "$VERSION"|sed 's/\..*//'`
 [MINOR_VERSION=`echo "$VERSION"|sed 's/[^.]*\.//;s/\..*//'`]
@@ -1123,6 +1128,8 @@ AC_CONFIG_FILES([
  docs/doxygen_api.conf
  docs/doxygen_source.conf
  xapian-core.spec
+ cmake/xapian-config.cmake
+ cmake/xapian-config-version.cmake
  ])
 AC_CONFIG_FILES([tests/runtest], [chmod +x tests/runtest])
 AC_CONFIG_FILES([tests/runsrv], [chmod +x tests/runsrv])
